<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/home_menu"
        android:title="@string/home_menu">

    </item>
    <item
        android:id="@+id/login_menu"
        android:title="@string/login_menu" />
    <item
        android:id="@+id/logout_menu"
        android:title="@string/logout_menu" />

    <item android:id="@+id/sleep_recorder"
        android:title="@string/sleep_recorder">
    </item>


    <item android:id="@+id/sleep_calendar_menu"
        android:title="@string/sleep_calendar_menu">
    </item>

    <item android:id="@+id/settings_menu"
        android:title="@string/settings_menu">
    </item>

    <item android:id="@+id/treatments_menu"
        android:title="@string/treatments_menu">
    </item>

    <item android:id="@+id/info_menu"
        android:title="@string/information_menu">
    </item>




</menu>