<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="25dp"
        android:text="@string/how_was_your_sleep"
        android:textSize="30sp" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:numStars="5"
        android:paddingBottom="25dp"
        android:rating="3.5"
        android:stepSize="1.0" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="10dp"
        android:text="@string/comment"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/add_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:text="@string/did_you_use_any_treatments"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/treatments_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="25dp" />

    <TextView
        android:id="@+id/sleep_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sleep_rating"
        android:gravity="center_horizontal"
        android:textSize="25sp"
        android:padding="20dp"/>

    <Button
        android:id="@+id/submit_sleep_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/submit_button"/>

</LinearLayout>