<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Welcome to RestEasy"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/loggedInText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/logged_in_text"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/loggedOutText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/logged_out_text"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/loggedName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textSize="30sp" />

    <Button
        android:id="@+id/loginButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autoText="false"
        android:onClick="loginClick"
        android:text="@string/login_menu"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textSize="24sp" />

    <Button
        android:id="@+id/logoutButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:onClick="logoutClick"
        android:text="@string/logout_menu"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="25dp"
        app:srcCompat="@drawable/logo" />


</LinearLayout>
