<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="25dp"
        android:text="@string/sleep_recorder"
        android:textSize="30sp" />


    <Button
        android:id="@+id/start_sleep"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/roundbuttonstart"
        android:text="@string/start_sleep"
        android:textColor="#fff"
        android:textSize="30sp" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/stop_sleep"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/roundbuttonstop"
            android:text="@string/stop_sleep"
            android:textColor="#fff"
            android:textSize="30sp" />


    </LinearLayout>
    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="00:00:00"
        android:textSize="60sp"
        android:layout_marginTop="10dp"/>



</LinearLayout>